# rust-app-web-shared-cli-boiler-plate

./: Cargo.toml  README.md  prompts.md
cli/: Cargo.toml
cli/src/: main.rs
devtools/: Cargo.toml
shared/: Cargo.toml
shared/src/: network.rs
src/: config.rs  helpers.rs  main.rs  one_off_off_by_one_bit_script.rs
web/: Cargo.toml
web/src/: main.rs
