[workspace]
members = [".", "cli", "devtools", "shared", "web"]

[workspace.dependencies]
uuid = { version = "1.11.0", features = ["v4"] }

[package]
name = "multibins"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "./shared" }
uuid = { workspace = true, version = "1.11.0" }

[[bin]]
name = "devtools"
path = "devtools/src/main.rs"

[[bin]]
name = "one-off"
path = "src/one_off_off_by_one_bit_script.rs"
